--- a/ml.ipynb
+++ b/ml.ipynb
@@ -244,7 +244,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.10.6 ('mne')",
    "language": "python",
    "name": "python3"
   },
@@ -258,12 +258,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "2043299c89c8cd0b4d1a6f5cf4529bd58e6a4e0fe3181a25e0d328c821cdc5c5"
+    "hash": "105ac0125afe8206db741672ac7216860dbd706aa356b113c2d3a091ba0f0cb0"
    }
   }
  },
