edit balance ml file

--- a/balance_demo_ml/balance_ml.ipynb
+++ b/balance_demo_ml/balance_ml.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read data\n",
-    "path = r\"D:\\Thesis\\Capstone-BCI-13\\new_csv.csv\"\n",
+    "path = r\"D:\\Thesis\\Capstone-BCI-13\\chb15_06.csv\"\n",
     "\n",
     "import pandas\n",
     "df = pandas.read_csv(path)  # Read the file\n",
@@ -18,7 +18,10 @@
     "# a = df['event'].value_counts()[0]   # non-seizure\n",
     "# b = df['event'].value_counts()[1]   # onset\n",
     "# c = df['event'].value_counts()[2]   # ictal\n",
-    "# print(\"--------\", c)"
+    "# print(\"non--------\", a)\n",
+    "# print(\"onset--------\", b)\n",
+    "# print(\"ictal--------\", c)\n",
+    "# print(\"total--------\", a+b+c)"
    ]
   },
   {
@@ -56,14 +59,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import pandas  as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score, precision_score, recall_score, f1_score\n",
+    "from imblearn.under_sampling import NearMiss\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7199, 256)\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = df.loc[:,'F8-T8']\n",
+    "X = np.asarray(X)\n",
+    "y = df.loc[:,\"event\"]\n",
+    "y = np.asarray(y)\n",
+    "\n",
+    "def strided_app(a, L, S ):  # Window len = L, Stride len/stepsize = S\n",
+    "    nrows = ((a.size-L)//S)+1\n",
+    "    n = a.strides[0]\n",
+    "    return np.lib.stride_tricks.as_strided(a, shape=(nrows,L), strides=(S*n,n))\n",
+    "\n",
+    "b = strided_app(X, L = 256, S = 128)\n",
+    "print(b.shape)\n",
+    "\n",
+    "z = strided_app(y, L = 256, S = 128)\n",
+    "\n",
+    "# z = [0]*7200\n",
+    "# a = 0\n",
+    "# b = 256\n",
+    "# for i in range(7200):\n",
+    "#     z[i] = X[a:b]\n",
+    "#     a += 128\n",
+    "#     b += 128\n",
+    "# print(z)\n",
+    "\n",
+    "# q = [0]*7199\n",
+    "# q.append(1)\n",
+    "# print(len(q))\n",
+    "\n",
+    "# X_train, X_test, y_train, y_test = train_test_split(b, z, test_size = 0.3, random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "[[2160]]\n"
+     ]
+    }
+   ],
    "source": [
     "# ML\n",
     "# x = features(f8-t8), y = label(0,1,2)\n",
     "from sklearn.svm import SVC\n",
-    "svm_model_linear = SVC(kernel = 'linear', C = 1).fit(X_train_miss, y_train_miss)\n",
+    "svm_model_linear = SVC(kernel = 'linear', C = 1).fit(X_train, y_train)\n",
     "svm_predictions = svm_model_linear.predict(X_test)\n",
     "  \n",
     "# model accuracy for X_test  \n",
@@ -74,6 +148,37 @@
     "\n",
     "print(accuracy)\n",
     "print(cm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(16236, 1)\n",
+      "[[-0.11631462]\n",
+      " [-0.11631359]\n",
+      " [ 0.20879191]\n",
+      " ...\n",
+      " [-0.11201819]\n",
+      " [-0.22658571]\n",
+      " [-0.2654133 ]]\n",
+      "(16236,)\n",
+      "[0. 0. 0. ... 2. 2. 2.]\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train_miss.shape)\n",
+    "print(X_train_miss)\n",
+    "print(y_train_miss.shape)\n",
+    "print(y_train_miss)\n",
+    "print(type(y_train_miss))"
    ]
   },
   {
@@ -103,7 +208,7 @@
    "outputs": [],
    "source": [
     "from sklearn.naive_bayes import GaussianNB\n",
-    "gnb = GaussianNB().fit(X_train_miss, y_train_miss)\n",
+    "gnb = GaussianNB().fit(X_train, y_train)\n",
     "gnb_predictions = gnb.predict(X_test)\n",
     "  \n",
     "# accuracy on X_test\n",
