--- a/plot-time-frequency/mark_github.ipynb
+++ b/plot-time-frequency/mark_github.ipynb
@@ -63,7 +63,8 @@
    "source": [
     "# load EEG\n",
     "# data_path = r'../plot-all-channels/data_chb01_03_all_channels2.npy'\n",
-    "data_path = f'../plot-all-channels/data_chb04_08_all_channels2.npy'\n",
+    "# data_path = f'../plot-all-channels/data_chb04_08_all_channels2.npy'\n",
+    "data_path = r'../convert-all-channel-edf/'\n",
     "data = np.load(data_path) \n",
     "seizure_info = { 'start': 6446, 'stop': 6557}\n",
     "Fs = 256  \n",
@@ -246,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Oct 24 2022, 11:04:34) [Clang 12.0.0 ]"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
